[gd_scene load_steps=11 format=3 uid="uid://c4forest00001"]

[ext_resource type="Script" path="res://scenes/verdant_forest/verdant_forest.gd" id="1_forest"]
[ext_resource type="PackedScene" uid="uid://c4player00001" path="res://entities/player/player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://d2h3u4d5s6c7n" path="res://ui/hud/hud.tscn" id="3_hud"]
[ext_resource type="Script" path="res://systems/encounter/encounter_system.gd" id="4_encounter"]
[ext_resource type="Script" path="res://events/iris_recruitment.gd" id="5_iris"]
[ext_resource type="PackedScene" uid="uid://d4d5i6a7l8o9g" path="res://ui/dialogue/dialogue_box.tscn" id="6_dlg"]
[ext_resource type="PackedScene" uid="uid://e5p6a7u8s9e0m" path="res://ui/pause_menu/pause_menu.tscn" id="7_pm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exit_ruins"]
size = Vector2(16, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exit_town"]
size = Vector2(16, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iris"]
size = Vector2(48, 48)

[node name="VerdantForest" type="Node2D"]
script = ExtResource("1_forest")

[node name="Ground" type="TileMapLayer" parent="."]

[node name="Trees" type="TileMapLayer" parent="."]

[node name="Paths" type="TileMapLayer" parent="."]

[node name="Entities" type="Node2D" parent="."]

[node name="Player" parent="Entities" instance=ExtResource("2_player")]
position = Vector2(80, 180)

[node name="SpawnFromRuins" type="Marker2D" parent="Entities"]
position = Vector2(80, 180)

[node name="SpawnFromTown" type="Marker2D" parent="Entities"]
position = Vector2(560, 180)

[node name="IrisEventMarker" type="Marker2D" parent="Entities"]
position = Vector2(320, 120)

[node name="Triggers" type="Node2D" parent="."]

[node name="ExitToRuins" type="Area2D" parent="Triggers"]
position = Vector2(16, 180)
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/ExitToRuins"]
shape = SubResource("RectangleShape2D_exit_ruins")

[node name="ExitToTown" type="Area2D" parent="Triggers"]
position = Vector2(624, 180)
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/ExitToTown"]
shape = SubResource("RectangleShape2D_exit_town")

[node name="IrisEventZone" type="Area2D" parent="Triggers"]
position = Vector2(320, 120)
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/IrisEventZone"]
shape = SubResource("RectangleShape2D_iris")

[node name="EncounterSystem" type="Node" parent="."]
script = ExtResource("4_encounter")

[node name="IrisRecruitment" type="Node" parent="."]
script = ExtResource("5_iris")

[node name="HUD" parent="." instance=ExtResource("3_hud")]

[node name="DialogueBox" parent="." instance=ExtResource("6_dlg")]

[node name="PauseMenu" parent="." instance=ExtResource("7_pm")]
